--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -55,3 +55,9 @@
   opacity: 0;
   }
 }
+
+.dropdown-item.active, .dropdown-item:active {
+  color: #212529;
+  text-decoration: none;
+  background-color: #f8f9fa;
+}
