--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -100,9 +100,11 @@ button:focus {
 .l_header {
   position: relative;
   z-index: 100;
-  padding: 22px 0;
   background-color: rgb(255, 253, 253);
   box-shadow: 0px 0px 5.95px 1.05px rgba(69, 65, 78, 0.08);
+  @media (min-width: 1200px) {
+    padding: 22px 0;
+  }
 
   .l_header--navbar {
     font-weight: 500;
@@ -135,21 +137,23 @@ button:focus {
     border-style: solid;
     background-color: $aside_bgc;
     border-top: none;
+    @media (min-width: 1201px) {
+      transform: none !important;
+    }
+
     @media (max-width: 1200px) {
       //position: relative;
       aside {
         height: auto;
       }
-      overflow: auto;
+      padding-top: 56px !important;
+      z-index: 99;
       height: 100%; /* Full-height: remove this if you want "auto" height */
       width: 390px; /* Set the width of the sidebar */
-      position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-      z-index: 1; /* Stay on top */
+      position: absolute; /* Fixed Sidebar (stay in place on scroll) */
       top: 0; /* Stay at the top */
-      left: 0;
-      overflow-x: hidden; /* Disable horizontal scroll */
-      padding-top: 120px;
-
+      left: -390px;
+      transition: all 1s ease-in-out;
       a {
         padding: 6px 8px 6px 16px;
         text-decoration: none;
@@ -162,9 +166,81 @@ button:focus {
         }
       }
     }
+    @media (max-width: 390px) {
+      width: 100vw;
+      left: -100vw;
+    }
+    &.show {
+      transform: translateX(390px);
+      @media (max-width: 390px) {
+        transform: translateX(100vw);
+        .l_site-sidebar {
+          .l_user-menu--toggle {
+            position: absolute;
+            right: 20px;
+            width: 23px;
+            height: 18px;
+            top: 10px;
+            border: none;
+            &::before{
+              content: "";
+              width: 23px;
+              height: 2px;
+              position: absolute;
+              left: 0;
+              top: 10px;
+              background-color: #38393B;
+              transform: rotate(50deg);
+            }
+            &::after{
+              content: "";
+              width: 23px;
+              height: 2px;
+              position: absolute;
+              left: 0;
+              top: 10px;
+              background-color: #38393B;
+              transform: rotate(130deg);
+            }
+          }
+        }
+      }
+    }
 
     .l_site-sidebar {
+      position: relative;
       padding-top: 30px;
+
+      .l_user-menu--toggle {
+        position: absolute;
+        right: -30px;
+        top: 10px;
+        width: 23px;
+        height: 18px;
+        transition: all 1s ease-in-out;
+        border-top: 2px solid #38393B;
+        &::before{
+          content: "";
+          width: 23px;
+          height: 2px;
+          position: absolute;
+          left: 0;
+          top: 14px;
+          background-color: #38393B;
+        }
+        &::after{
+          content: "";
+          width: 23px;
+          height: 2px;
+          position: absolute;
+          left: 0;
+          top: 6px;
+          background-color: #38393B;
+        }
+        @media (min-width: 1201px) {
+          visibility: hidden;
+        }
+      }
 
       .l_user-info {
         .l_user-photo {
