--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,17 @@ $a: #2c2d2e !default;
 $a_hover: #cd2868 !default;
 $a_focus: #b01e56 !default;
 
+$a_hover2: #511ce3 !default;
+$a_focus2: #441aba !default;
+
+$a_inline: #FF3C88 !default;
+$a_inline2: #5f26ff !default;
+
+$a_inline3: #6244c9 !default;
+$a_hover3: #4f34ab !default;
+$a_focus3: #3b287e !default;
+
+
 $aside_bc: #F3EDFB !default;
 $aside_bgc:  #FFFDFD !default;
 $aside_tc: #2c2d2e !default;
