--- a/css/app.css
+++ b/css/app.css
@@ -9852,21 +9852,21 @@ h3 {
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
   border-radius: 2.25rem;
   padding: 0.775rem 3rem;
-  color: #FFF;
+  color: #fff;
 }
 .btn-custom:hover {
-  color: #FFF;
+  color: #fff;
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
   box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 .btn-custom:focus {
-  color: #FFF;
+  color: #fff;
   background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
   box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
 }
 
 .btn-inline-custom, .btn-inline-custom3, .btn-inline-custom2 {
-  color: #FFF;
+  color: #fff;
   background-color: #FF3C88;
   font-size: 1rem;
   border-radius: 1.25rem;
@@ -9875,12 +9875,12 @@ h3 {
   font-family: "RubikRegular", sans-serif;
 }
 .btn-inline-custom:hover, .btn-inline-custom3:hover, .btn-inline-custom2:hover {
-  color: #FFF;
+  color: #fff;
   border-color: #cd2868;
   background-color: #cd2868;
 }
 .btn-inline-custom:focus, .btn-inline-custom3:focus, .btn-inline-custom2:focus {
-  color: #FFF;
+  color: #fff;
   border-color: #b01e56;
   background-color: #b01e56;
 }
@@ -9890,12 +9890,12 @@ h3 {
   border: 2px solid #5f26ff;
 }
 .btn-inline-custom2:hover {
-  color: #FFF;
+  color: #fff;
   border-color: #511ce3;
   background-color: #511ce3;
 }
 .btn-inline-custom2:focus {
-  color: #FFF;
+  color: #fff;
   border-color: #441aba;
   background-color: #441aba;
 }
@@ -9910,12 +9910,12 @@ h3 {
   font-family: "Montserrat", sans-serif;
 }
 .btn-inline-custom3:hover {
-  color: #FFF;
+  color: #fff;
   border-color: #4f34ab;
   background-color: #4f34ab;
 }
 .btn-inline-custom3:focus {
-  color: #FFF;
+  color: #fff;
   border-color: #3b287e;
   background-color: #3b287e;
 }
@@ -9933,12 +9933,12 @@ h3 {
   font-family: "RubikRegular", sans-serif;
 }
 .btn-outline-custom:hover, .btn-outline-custom2:hover {
-  color: #FFF;
+  color: #fff;
   background-color: #FF3C88;
   border-color: #FF3C88;
 }
 .btn-outline-custom:focus, .btn-outline-custom2:focus {
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
   background-color: #ec2874;
 }
@@ -9948,19 +9948,29 @@ h3 {
   border: 2px solid #5f26ff;
 }
 .btn-outline-custom2:hover {
-  color: #FFF;
+  color: #fff;
   background-color: #511ce3;
   border-color: #511ce3;
 }
 .btn-outline-custom2:focus {
-  color: #FFF;
+  color: #fff;
   border-color: #441aba;
   background-color: #441aba;
 }
 
 .btn-br-default {
-  border: 1px solid #f3edfb;
+  border: 1px solid #F3EDFB;
   border-radius: 10px;
+}
+.btn-br-default:hover {
+  color: #fff;
+  background-color: #dbc6ff;
+  border-color: #dbc6ff;
+}
+.btn-br-default:focus {
+  color: #fff;
+  border-color: #cdb1fd;
+  background-color: #cdb1fd;
 }
 
 .btn-custom-lg {
@@ -10011,6 +10021,16 @@ h3 {
 
 .bg-f9 {
   background-color: #F9F9F9;
+}
+
+@media (max-width: 991px) {
+  .fixed-md-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+  }
 }
 
 .navbar-collapse {
@@ -10071,6 +10091,16 @@ h3 {
   color: #212529;
   text-decoration: none;
   background-color: #f8f9fa;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav .dropdown-menu {
+    position: absolute;
+    background-color: transparent;
+  }
+  .navbar-nav .dropdown-menu .dropdown-item {
+    color: #fff;
+  }
 }
 
 body {
@@ -10175,7 +10205,7 @@ button:focus {
 }
 @media (min-width: 1200px) {
   .l_header {
-    padding: 22px 0;
+    padding: 1.375rem 0;
   }
 }
 .l_header .l_header--navbar {
@@ -10188,19 +10218,24 @@ button:focus {
   }
 }
 .l_header .l_tariff-range {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: #2c2d2e;
   font-weight: 500;
 }
 .l_header .l_tariff-button {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 500;
-  padding: 5px 29px;
+  padding: 0.3125rem 1.8125rem;
   background-color: #ff3c88;
   text-align: center;
   color: #fff;
 }
 
+@media (max-width: 991px) {
+  .l_site-main {
+    margin-top: 3.5rem;
+  }
+}
 .l_site-main .sidenav {
   border-width: 1px;
   border-color: #F3EDFB;
@@ -10216,7 +10251,7 @@ button:focus {
 }
 @media (max-width: 1200px) {
   .l_site-main .sidenav {
-    padding-top: 56px !important;
+    padding-top: 3.5rem !important;
     z-index: 99;
     height: 100%;
     /* Full-height: remove this if you want "auto" height */
@@ -10231,13 +10266,6 @@ button:focus {
   }
   .l_site-main .sidenav aside {
     height: auto;
-  }
-  .l_site-main .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
   }
   .l_site-main .sidenav a:hover {
     color: #f1f1f1;
@@ -10291,7 +10319,7 @@ button:focus {
 }
 .l_site-main .sidenav .l_site-sidebar {
   position: relative;
-  padding-top: 30px;
+  padding-top: 1.875rem;
 }
 .l_site-main .sidenav .l_site-sidebar .l_user-menu--toggle {
   position: absolute;
@@ -10326,20 +10354,20 @@ button:focus {
   }
 }
 .l_site-main .sidenav .l_site-sidebar .l_user-info .l_user-photo {
-  max-width: 150px;
+  max-width: 9.375rem;
   border-radius: 50%;
 }
 .l_site-main .sidenav .l_site-sidebar .l_user-info .l_user-login {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 500;
 }
 .l_site-main .sidenav .l_site-sidebar .l_user-info .l_user-name {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 500;
 }
 .l_site-main .sidenav .l_site-sidebar .l_user-info .l_user-edit {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 .l_site-main .sidenav .l_site-sidebar .l_user-soc_info .l_user-soc_info--title {
   color: #2c2d2e;
@@ -10359,7 +10387,7 @@ button:focus {
 .l_site-main .sidenav .l_site-sidebar .l_other_account .l_other_account-info {
   color: #2c2d2e;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.125rem;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -10378,12 +10406,12 @@ button:focus {
 }
 .l_site-main .sidenav .l_site-sidebar .l_other_account .l_other_account-info .l_other_account-btn--edit {
   margin-left: auto;
-  font-size: 25px;
+  font-size: 1.5625rem;
   font-weight: 700;
   letter-spacing: 2px;
   display: flex;
   height: 30px;
-  line-height: 20px;
+  line-height: 1.25rem;
   cursor: pointer;
 }
 .l_site-main .sidenav .l_site-sidebar .l_other_account .l_other_account-info .l_other_account-btn--edit::after {
@@ -10415,10 +10443,10 @@ button:focus {
   text-align: center;
 }
 .l_site-main .sidenav .l_site-sidebar .l_account-add .l_total-account {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 500;
   color: #999999;
-  margin-right: 15px;
+  margin-right: 0.9375rem;
 }
 .l_site-main .sidenav .l_site-sidebar .l_account-add .l_account-btn--add {
   padding: 0.55rem 3rem;
@@ -10428,22 +10456,22 @@ button:focus {
   text-decoration: underline;
 }
 .l_site-main .l_site-content {
-  padding-top: 30px;
-  margin-bottom: 30px;
+  padding-top: 1.875rem;
+  margin-bottom: 1.875rem;
 }
 @media (max-width: 576px) {
   .l_site-main .l_site-content {
-    margin-bottom: 15px;
+    margin-bottom: 0.9375rem;
   }
 }
 .l_site-main .l_site-content .l_create-pub {
-  margin-bottom: 5px;
+  margin-bottom: 0.3125rem;
 }
 .l_site-main .l_site-content .l_total-public {
   font-size: 0.75rem;
   font-weight: 600;
   color: #999999;
-  margin-right: 15px;
+  margin-right: 0.9375rem;
 }
 .l_site-main .l_icon {
   width: 15px;
@@ -10462,7 +10490,7 @@ button:focus {
 }
 
 .fc {
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
 .fc .fc-header-toolbar .fc-left h2 {
   font-size: 1.5rem;
@@ -10511,14 +10539,14 @@ button:focus {
 }
 .fc .fc-row table th {
   font-weight: 500;
-  font-size: 18px;
-  padding: 6px 0;
+  font-size: 1.125rem;
+  padding: 0.375rem 0;
 }
 .fc .fc-popover.fc-more-popover .fc-header.fc-widget-header {
-  padding: 4px 4px;
+  padding: 0.25rem;
 }
 .fc .fc-popover.fc-more-popover .fc-header.fc-widget-header .fc-title {
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 .fc .fc-content {
   display: flex;
@@ -10570,7 +10598,7 @@ button:focus {
 }
 .l_footer .l_icon:hover {
   border: 0.5px solid transparent;
-  border-radius: 25px;
+  border-radius: 1.5625rem;
 }
 .l_footer .l_icon--youtube {
   background: url(../images/sprite.png) no-repeat 0 0;
@@ -10623,7 +10651,7 @@ button:focus {
 .l_footer .widget-currency .gl-list li {
   border: 2px solid #6C42CE;
   border-right: none;
-  padding: 0 9px;
+  padding: 0 0.5625rem;
 }
 .l_footer .widget-currency .gl-list li:last-child {
   border-right: 2px solid #6C42CE;
