--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,19 +1,21 @@
+@import "variables";
+
 .btn-custom {
   background-position: -2px;
   background-size: 101%;
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
    border-radius: 2.25rem;
   padding: 0.775rem 3rem;
-  color: #FFF;
+  color: $white;
 
   &:hover {
-    color: #FFF;
+    color: $white;
     background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
     box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
   }
 
   &:focus {
-    color: #FFF;
+    color: $white;
     background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
     box-shadow: 0 0 29.64px 8.36px rgba(116, 27, 200, 0.15);
   }
@@ -21,60 +23,60 @@
 }
 
 .btn-inline-custom {
-  color: #FFF;
-  background-color: #FF3C88;
+  color: $white;
+  background-color: $a_inline;
   font-size: 1rem;
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
-  border: 2px solid #FF3C88;
+  border: 2px solid $a_inline;
   font-family: 'RubikRegular', sans-serif;
 
   &:hover {
-    color: #FFF;
-    border-color: #cd2868;
-    background-color: #cd2868;
+    color: $white;
+    border-color: $a_hover;
+    background-color: $a_hover;
   }
   &:focus {
-    color: #FFF;
-    border-color: #b01e56;
-    background-color: #b01e56;
+    color: $white;
+    border-color: $a_focus;
+    background-color: $a_focus;
   }
 }
 
 .btn-inline-custom2 {
   @extend .btn-inline-custom;
-  background-color: #5f26ff;
-  border: 2px solid #5f26ff;
+  background-color: $a_inline2;
+  border: 2px solid $a_inline2;
   &:hover {
-    color: #FFF;
-    border-color: #511ce3;
-    background-color: #511ce3;
+    color: $white;
+    border-color: $a_hover2;
+    background-color: $a_hover2;
   }
   &:focus {
-    color: #FFF;
-    border-color: #441aba;
-    background-color: #441aba;
+    color: $white;
+    border-color: $a_focus2;
+    background-color: $a_focus2;
   }
 }
 
 .btn-inline-custom3 {
   @extend .btn-inline-custom;
-  border: solid 1px #6244c9;
+  border: solid 1px $a_inline3;
   border-radius: 10px;
-  background-color: #6244c9;
+  background-color: $a_inline3;
   padding: 0.55rem 1.45rem;
   font-size: 0.875rem;
   font-weight: 500;
   font-family: "Montserrat", sans-serif;
   &:hover {
-    color: #FFF;
-    border-color: #4f34ab;
-    background-color: #4f34ab;
+    color: $white;
+    border-color: $a_hover3;
+    background-color: $a_hover3;
   }
   &:focus {
-    color: #FFF;
-    border-color: #3b287e;
-    background-color: #3b287e;
+    color: $white;
+    border-color: $a_focus3;
+    background-color: $a_focus3;
   }
   & svg{
     width: 11px;
@@ -85,21 +87,21 @@
 
 
 .btn-outline-custom {
-  color: #FF3C88;
+  color: $a_inline;
   font-size: 1rem;
   border-radius: 1.25rem;
   padding: 0.375rem 2.78rem;
-  border: 2px solid #FF3C88;
+  border: 2px solid $a_inline;
   font-family: 'RubikRegular', sans-serif;
 
   &:hover {
-    color: #FFF;
-    background-color: #FF3C88;
-    border-color: #FF3C88;
+    color: $white;
+    background-color: $a_inline;
+    border-color: $a_inline;
   }
 
   &:focus {
-    color: #FFF;
+    color: $white;
     text-decoration: none;
     background-color: #ec2874;
   }
@@ -107,25 +109,36 @@
 
 .btn-outline-custom2 {
   @extend .btn-outline-custom;
-  color: #5f26ff;
-  border: 2px solid #5f26ff;
+  color: $a_inline2;
+  border: 2px solid $a_inline2;
   &:hover {
-    color: #FFF;
-    background-color: #511ce3;
-    border-color: #511ce3;
+    color: $white;
+    background-color: $a_hover2;
+    border-color: $a_hover2;
   }
 
   &:focus {
-    color: #FFF;
-    border-color: #441aba;
-    background-color: #441aba;
+    color: $white;
+    border-color: $a_focus2;
+    background-color: $a_focus2;
   }
 }
 
 
 .btn-br-default{
-  border: 1px solid #f3edfb;
+  border: 1px solid $aside_bc;
   border-radius: 10px;
+  &:hover {
+    color: $white;
+    background-color: #dbc6ff;
+    border-color: #dbc6ff;
+  }
+
+  &:focus {
+    color: $white;
+    border-color: #cdb1fd;
+    background-color: #cdb1fd;
+  }
 }
 
 .btn-custom-lg {
