--- a/css/app.css
+++ b/css/app.css
@@ -10107,6 +10107,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 1em;
   margin: 0 auto;
+  touch-action: none;
   position: relative;
   transition: -webkit-transform 0.1s ease-in-out;
   transition: transform 0.1s ease-in-out;
@@ -10277,16 +10278,16 @@ button:focus {
     left: -100vw;
   }
 }
-.l_site-main .sidenav.show {
+.r-menu_show .l_site-main .sidenav {
   -webkit-transform: translateX(390px);
           transform: translateX(390px);
 }
 @media (max-width: 390px) {
-  .l_site-main .sidenav.show {
+  .r-menu_show .l_site-main .sidenav {
     -webkit-transform: translateX(100vw);
             transform: translateX(100vw);
   }
-  .l_site-main .sidenav.show .l_site-sidebar .l_user-menu--toggle {
+  .r-menu_show .l_site-main .sidenav .l_site-sidebar .l_user-menu--toggle {
     position: absolute;
     right: 20px;
     width: 23px;
@@ -10294,7 +10295,7 @@ button:focus {
     top: 10px;
     border: 0 solid transparent;
   }
-  .l_site-main .sidenav.show .l_site-sidebar .l_user-menu--toggle::before {
+  .r-menu_show .l_site-main .sidenav .l_site-sidebar .l_user-menu--toggle::before {
     content: "";
     width: 23px;
     height: 2px;
@@ -10305,7 +10306,7 @@ button:focus {
     -webkit-transform: rotate(50deg);
             transform: rotate(50deg);
   }
-  .l_site-main .sidenav.show .l_site-sidebar .l_user-menu--toggle::after {
+  .r-menu_show .l_site-main .sidenav .l_site-sidebar .l_user-menu--toggle::after {
     content: "";
     width: 23px;
     height: 2px;
