--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,7 +17,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1em;
   margin: 0 auto;
-  touch-action: none;
+  touch-action: pan-y;
   position: relative;
   transition: transform .1s ease-in-out;
   background-color: #fff;
