--- a/css/app.css
+++ b/css/app.css
@@ -10037,6 +10037,39 @@ h3 {
   display: none !important;
 }
 
+.text-small {
+  font-size: 0.5rem !important;
+}
+
+.text-normal {
+  font-size: 1rem !important;
+}
+
+.text-medium {
+  font-size: 1.3rem !important;
+}
+
+.text-large {
+  font-size: 2rem !important;
+}
+
+.rounded-medium {
+  border-radius: 0.65rem !important;
+}
+
+.rounded-large {
+  border-radius: 1rem !important;
+}
+
+.custom-field {
+  border-radius: 10px;
+  background-color: white;
+  border: none;
+  font-size: 1.5rem;
+  color: #777777;
+  padding: 2.1875rem 1.5625rem;
+}
+
 .navbar-collapse {
   transition: all 1s ease-in-out;
   -webkit-transform: translate3d(0, 0, 0);
@@ -10107,12 +10140,16 @@ h3 {
   }
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 1em;
   margin: 0 auto;
   touch-action: pan-y;
-  position: relative;
   transition: -webkit-transform 0.1s ease-in-out;
   transition: transform 0.1s ease-in-out;
   transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
@@ -10239,6 +10276,11 @@ button:focus {
 @media (max-width: 991px) {
   .l_site-main {
     margin-top: 3.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .l_site-main {
+    margin-bottom: 210px;
   }
 }
 .l_site-main .sidenav {
@@ -10506,10 +10548,34 @@ button:focus {
 .l_site-main .l_icon--edit {
   background: url(../images/sprite_btn.png) no-repeat -35px 0;
 }
+.l_site-main .l_reg-title {
+  font-size: 3rem;
+  font-weight: 500;
+  font-family: "Rubik";
+}
+.l_site-main .l_registration .l_reg-container {
+  width: 630px;
+  padding: 53px 30px;
+  background-color: #F9F9F9;
+  border-radius: 10px;
+}
+.l_site-main .l_registration .l_reg-container .l_reg-user-accept {
+  color: #777777;
+}
+.l_site-main .l_registration .l_reg-container .l_reg-user-accept a {
+  text-decoration: underline;
+}
+.l_site-main .l_registration .l_reg-container .l_reg-user-quest {
+  color: #777777;
+}
+.l_site-main .l_registration .l_reg-container .l_reg-user-quest a {
+  color: #6244c9;
+  text-decoration: underline;
+}
 
 .cal_img-thumb {
-  width: 110px;
-  height: 110px;
+  width: 0;
+  height: 0;
   position: absolute;
   z-index: 99;
   opacity: 0;
@@ -10592,7 +10658,14 @@ button:focus {
   padding-top: 2.5rem;
   line-height: 2rem;
   background-color: #fffdfd;
-  box-shadow: 0px 0px 5.95px 1.05px rgba(69, 65, 78, 0.08);
+  box-shadow: 0 0 5.95px 1.05px rgba(69, 65, 78, 0.08);
+}
+@media (min-width: 1200px) {
+  .l_footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
 }
 .l_footer a {
   color: #1f2022;
