--- a/css/spa-app.css
+++ b/css/spa-app.css
@@ -9921,6 +9921,39 @@ h3 {
   display: none !important;
 }
 
+.text-small {
+  font-size: 0.5rem !important;
+}
+
+.text-normal {
+  font-size: 1rem !important;
+}
+
+.text-medium {
+  font-size: 1.3rem !important;
+}
+
+.text-large {
+  font-size: 2rem !important;
+}
+
+.rounded-medium {
+  border-radius: 0.65rem !important;
+}
+
+.rounded-large {
+  border-radius: 1rem !important;
+}
+
+.custom-field {
+  border-radius: 10px;
+  background-color: white;
+  border: none;
+  font-size: 1.5rem;
+  color: #777777;
+  padding: 2.1875rem 1.5625rem;
+}
+
 .navbar-collapse {
   transition: all 1s ease-in-out;
   -webkit-transform: translate3d(0, 0, 0);
