--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,7 +15,7 @@
 
 html {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
@@ -27,11 +27,52 @@ body {
   transition: transform .1s ease-in-out;
   background-color: #fff;
   color: $main_black;
+  height: 100%;
+}
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  @media (min-width: 768px) {
+    display: table;
+  }
+}
+
+.footer-container {
+  display: table-footer-group;
+  vertical-align: top;
+  width: 100%;
+}
+
+.l_header--menu {
+  & > .nav-item > .nav-link {
+    text-transform: uppercase;
+    padding: 0.5rem 1.5rem;
+  }
 }
 
 .navbar .nav-item {
+  .navbar-nav .nav-item {
+    @media (max-width: 991px) {
+      padding: 0;
+    }
+  }
+
   @media (max-width: 991px) {
     padding: 1rem 1rem;
+  }
+
+  .nav-link {
+    @media (max-width: 991px) {
+      color: #feffff;
+    }
+  }
+
+  .l_tariff-range {
+    @media (max-width: 991px) {
+      color: #feffff;
+    }
   }
 }
 
@@ -147,7 +188,7 @@ button:focus {
     margin-top: 3.5rem;
   }
   @media (min-width: 1200px) {
-    margin-bottom: 210px;
+    //margin-bottom: 210px;
   }
 
   .sidenav {
@@ -273,9 +314,24 @@ button:focus {
       }
 
       .l_user-info {
-        .l_user-photo {
-          max-width: 9.375rem;
-          border-radius: 50%;
+        .l_user-photo_container {
+          position: relative;
+          display: inline-block;
+
+          &::before {
+            content: "";
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            left: 6px;
+            top: 6px;
+            background: url(../images/locked.png) no-repeat 0 0;
+          }
+
+          .l_user-photo {
+            max-width: 9.375rem;
+            border-radius: 50%;
+          }
         }
 
         .l_user-login {
@@ -323,10 +379,51 @@ button:focus {
           display: flex;
           align-items: center;
           flex-wrap: wrap;
+          position: relative;
+          .auth-message_container {
+            font-size: 14px;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-around;
+            position: absolute;
+            background-color: rgba(67, 67, 67, .85);
+            width: 100%;
+            color: #fff;
+            height: 100%;
+            z-index: 99;
+            a{
+              color: #fff;
+              font-weight: bold;
+              text-decoration: underline;
+            }
+            .auth-message{
+              width: 60%;
+            }
+            .auth-message_info{
+              color: #fff;
+            }
+          }
+          .l_other_account-photo_container {
+            position: relative;
+            display: inline-block;
 
-          .l_other_account-photo {
-            max-width: 79px;
-            border-radius: 50%;
+            &.active {
+              &::before {
+                content: "";
+                position: absolute;
+                width: 32px;
+                height: 32px;
+                left: 0;
+                top: 0;
+                background: url(../images/locked.png) no-repeat 0 0;
+              }
+            }
+
+            .l_other_account-photo {
+              max-width: 79px;
+              border-radius: 50%;
+            }
           }
 
           .l_other_account-login {
@@ -381,19 +478,21 @@ button:focus {
         }
       }
 
-      .l_account-add {
-        text-align: center;
+      .l_account-footer {
+        .l_account-add {
+          text-align: center;
 
-        .l_total-account {
-          font-size: 0.875rem;
-          font-weight: 500;
-          color: #999999;
-          margin-right: 0.9375rem;
-        }
+          .l_total-account {
+            font-size: 0.875rem;
+            font-weight: 500;
+            color: #999999;
+            margin-right: 0.9375rem;
+          }
 
-        .l_account-btn--add {
-          padding: 0.55rem 3rem;
+          .l_account-btn--add {
+            padding: 0.55rem 3rem;
 
+          }
         }
       }
     }
@@ -421,7 +520,9 @@ button:focus {
       font-size: 0.75rem;
       font-weight: 600;
       color: #999999;
-      margin-right: 0.9375rem;
+      @media (min-width: 576px) {
+        margin-right: 0.9375rem;
+      }
     }
   }
 
@@ -447,7 +548,10 @@ button:focus {
   .l_reg-title {
     font-size: 3rem;
     font-weight: 500;
-    font-family: 'Rubik';
+    font-family: Rubik;
+    @media (max-width: 576px) {
+      font-size: 2.8rem;
+    }
   }
 
   .l_registration {
@@ -459,6 +563,7 @@ button:focus {
 
       .l_reg-user-accept {
         color: #777777;
+
         a {
           text-decoration: underline;
         }
@@ -466,6 +571,7 @@ button:focus {
 
       .l_reg-user-quest {
         color: #777777;
+
         a {
           color: #6244c9;
           text-decoration: underline;
@@ -482,7 +588,8 @@ button:focus {
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  transition: all 1s ease-in-out;
+  border-radius: 10px;
+  border: 2px solid #e3c7ff;
 }
 
 .fc {
@@ -576,14 +683,13 @@ button:focus {
 }
 
 .l_footer {
-  padding-top: 2.5rem;
   line-height: 2rem;
   background-color: rgb(255, 253, 253);
   box-shadow: 0 0 5.95px 1.05px rgba(69, 65, 78, 0.08);
   @media (min-width: 1200px) {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    // position: absolute;
+    // bottom: 0;
+    // width: 100%;
   }
 
   a {
